--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Full Page Component</title>
+</head>
+<body>
+    <div class="full-page-component">
+        <header>
+            <h1>Title</h1>
+            <button onclick="showAlert()">Click here</button>
+        </header>
+        <div class="image-container">
+            <img src="https://images2.alphacoders.com/862/862730.jpg" alt="">
+        </div>
+        <footer></footer>
+    </div>
+
+    <script src="./index.js"></script>
+</body>
+</html>
 
