--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
     <title>Full Page Component</title>
 </head>
 <body>
     <div class="full-page-component">
-        <header>
-            <h1>Title</h1>
-            <button onclick="showAlert()">Click here</button>
-        </header>
+        <header></header>
         <div class="image-container">
             <img src="https://images2.alphacoders.com/862/862730.jpg" alt="">
+            <div class="image-overlay">
+                <h2 id="overlay-title">Restaurant</h2>
+                <button onclick="showAlert()">Click here</button>
+            </div>
         </div>
         <footer></footer>
     </div>
