--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="index.css">
     <title>Full Page Component</title>
 </head>
-<body>
-    <div class="full-page-component">
+<body class="full-page-component">
+    <!-- <div class="full-page-component"> -->
         <header></header>
         <div class="image-container">
             <img src="https://images2.alphacoders.com/862/862730.jpg" alt="">
             <div class="image-overlay">
                 <h2 id="overlay-title">Restaurant</h2>
-                <button onclick="showAlert()">Click here</button>
+                <button class="overlay-button" onclick="showAlert()">Click here</button>
             </div>
         </div>
         <footer></footer>
-    </div>
+    <!-- </div> -->
 
     <script src="./index.js"></script>
 </body>
