--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Full Page Component</title>
 </head>
 <body class="full-page-component">
-    <!-- <div class="full-page-component"> -->
-        <header></header>
-        <div class="image-container">
-            <img src="https://images2.alphacoders.com/862/862730.jpg" alt="">
-            <div class="image-overlay">
-                <h2 id="overlay-title">Restaurant</h2>
-                <button class="overlay-button" onclick="showAlert()">Click here</button>
-            </div>
+    <header></header>
+    <div class="image-container">
+        <img src="https://images2.alphacoders.com/862/862730.jpg" alt="">
+        <div class="image-overlay">
+            <h2 id="overlay-title">Restaurant</h2>
+            <button class="overlay-button" onclick="showAlert()">Click here</button>
         </div>
-        <footer></footer>
-    <!-- </div> -->
-
-    <script src="./index.js"></script>
+    </div>
+    <footer></footer>
 </body>
+<script src="./index.js"></script>
 </html>
 
