header and footer content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Full Page Component</title>
 </head>
 <body class="full-page-component">
-    <header></header>
+    <header>
+        <div class="header-content">
+            <h1>Travelopia</h1>
+            <p>Welcome to Travelopia! Feel free to explore.</p>
+        </div>
+    </header>
     <div class="image-container">
         <img src="https://images2.alphacoders.com/862/862730.jpg" alt="">
         <div class="image-overlay">
@@ -15,7 +20,18 @@
             <button class="overlay-button" onclick="showAlert()">Click here</button>
         </div>
     </div>
-    <footer></footer>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-column">
+                <h3>Contact</h3>
+                <p>Email: info@travelopia.com</p>
+            </div>
+            <div class="footer-column">
+                <h3>Follow Us</h3>
+                <p>Twitter: @travelopia</p>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="./index.js"></script>
 </html>
